2014/1/1
basic command line interface supermemo, Done.